--- a/IntuneLAPsAdmin/IntuneLAPsAdmin/IntuneLAPsAdmin.csproj
+++ b/IntuneLAPsAdmin/IntuneLAPsAdmin/IntuneLAPsAdmin.csproj
@@ -12,8 +12,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="3.1.4" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.Graph" Version="1.21.0" />
     <PackageReference Include="Sotsera.Blazor.Toaster" Version="3.0.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="0.1.5-preview" />
+    <PackageReference Include="Microsoft.Identity.Web.UI" Version="0.1.5-preview" />
   </ItemGroup>
 
 </Project>
